fix mobile scrolling on iOS?

--- a/newstyle.css
+++ b/newstyle.css
@@ -1,6 +1,7 @@
 html,body{
     -webkit-user-select: none;
     -webkit-touch-callout: none;
+    -webkit-overflow-scrolling: unset;
 	padding: 0;
 	margin: 0;
 	width:100%;
